tests/vertical-slice/accept/string_tuple_share.hew
fn main() -> string {
    let s = "hello";
    let _pair = (s, "anchor");
    s
}
