tests/vertical-slice/reject/move_into_tuple_owned_record.hew
type Owned { value: string; }

fn main() -> string {
    let item = Owned { value: "hello" };
    let _pair = (item, 1);
    item.value
}
